fixes media button spacings

--- a/assets/css/my_styles.css
+++ b/assets/css/my_styles.css
@@ -1,4 +1,5 @@
 .profile_button{
     height: 32px;
     width: 32px;
+    padding: 8px;
 }
